service/external-service.yml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  type: ExternalName
  externalName: example.org
  ports:
    - port: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: curl-external
spec:
  containers:
  - name: nginx
    image: destiaeka/nginx-curl
