service/localbalancer.yml

apiVersion: v1
kind: Service
metadata:
  name: loadbalance
spec:
  type: LoadBalancer
  selector:
    name: nginx
  ports:
    - port: 80
