service/service-nginx.yml

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    label: nginx
  ports:
    - port: 8080
      targetPort: 80

---

apiVersion: v1
kind: Pod
metadata:
  name: curl
spec:
  containers:
  - name: curl
    image: destiaeka/nginx-curl
