service/ingress.yml
#SERVICE FRONTEND
apiVersion: v1
kind: Service
metadata:
  name: service-nginx-frontend
spec:
  selector:
    name: frontend
  ports:
    - port: 80
      targetPort: 80

---

#SERVICE BACKEND
apiVersion: v1
kind: Service
metadata:
  name: service-nginx-backend
spec:
  selector:
    name: backend
  ports:
    - port: 8080
      targetPort: 5678

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    name: nginx-ingress
spec:
  rules:
    - host: nginx.destiaeka.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-nginx-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: service-nginx-backend
                port:
                  number: 8080
